# flashdb-rs

./: .gitattributes   .gitignore  Cargo.toml  README.md  build.rs
benches/: performance_bench.rs
flashdb/: fdb.c  fdb_file.c  fdb_kvdb.c  fdb_tsdb.c  fdb_utils.c  shim.c
flashdb/inc/: fdb_cfg.h  fdb_def.h  fdb_low_lvl.h  flashdb.h
src/: error.rs  kvdb.rs  lib.rs  storage.rs  time.rs  tsdb.rs  utils.rs
src/kvdb/: iter.rs  mod.rs  reader.rs  types.rs
src/tsdb/: mod.rs  reader.rs  types.rs
tests/: mod.rs
tests/kvdb/: mod.rs
tests/tsdb/: mod.rs
