[package]
authors = ["foxxorcat"]
description = "Driver for the registers on a TLV320AIC3204 I²C Audio CODEC"
edition = "2021"
homepage = "https://github.com/foxxorcat/flashdb-rs"
license = "Apache-2.0"
name = "flashdb-rs"
readme = "README.md"
repository = "https://github.com/foxxorcat/flashdb-rs.git"
version = "0.2.0"

[build-dependencies]
cc = "1.2.26"
bindgen = "0.72.0"

[dev-dependencies]
tempfile = "3.4.0"
rand = "0.8.5"
assert_cmd = "2.0.17"
anyhow = "1.0.98"
criterion = { version = "0.5", features = ["html_reports"] } # 添加 criterion

[dependencies]
embedded-io = "0.6.1"
embedded-storage = "0.3.1"
log = { version = "0.4.27", optional = true }
lru = { version = "0.12.3", optional = true }
thiserror = { version = "2.0.12", default-features = false }

[features]
default = ["kvdb", "tsdb", "log", "time64", "std"]
kvdb = []
tsdb = []
time64 = []
std = ["embedded-io/std", "dep:lru", "alloc"]
alloc = []
log = ["dep:log"]

[[bench]]
name = "performance_bench"
harness = false
